web-infras/parser/tests/fixtures/babel/core/uncategorised/514/output.txt
[SyntaxError]: duplicate params (1,15)
1|function a(t, t) { "use strict"; }
 |             ^
